--- a/libneil/src/plugins/lunar_faust/SConscript
+++ b/libneil/src/plugins/lunar_faust/SConscript
@@ -1,8 +1,7 @@
 Import('pluginenv', 'build_plugin')
 
 localenv = pluginenv.Clone()
-localenv.Append(LIBS=['faustwithllvm', 'zzub'])
+localenv.Append(LIBS=['lanternfish', 'faustwithllvm', 'zzub'])
 localenv.Append(CPPPATH=["${LANTERNFISH_SRC_PATH}"])
-localenv.Append(LIBS=['lanternfish'])
 
 build_plugin(localenv, "faust_oscillator", ['faust_oscillator.cpp', 'faust_oscillator_info.cpp', 'faust_ui.cpp'])
